# Reko

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  capturekit-macos-blueprint.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-check.yml  release.yml
CaptureKitEngine/: Package.swift
RekoEngine/: Package.swift
apps/api/: package.json  tsconfig.json  wrangler.toml
apps/app/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/player/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/website/: index.html  package.json  wrangler.jsonc
docs/: RELEASING.md  user-flows.md
docs/plans/: 2026-02-13-capturekit-architecture-design.md  2026-02-13-phase-0-1-implementation.md  2026-02-13-phase-2-camera-pause-audio-levels.md  2026-02-13-phase-3-editor-mvp.md  2026-02-13-phase-4-metal-export.md  2026-02-13-phase-5-auto-zoom-cursor-effects.md  2026-02-13-phase-6-floating-recorder-toolbar.md  2026-02-14-permission-onboarding.md  2026-02-14-premiere-style-timeline-design.md  2026-02-14-premiere-timeline-implementation.md  2026-02-14-timeline-redesign-implementation.md  2026-02-14-timeline-redesign.md  2026-02-14-window-recording.md  2026-02-16-click-highlight-export.md  2026-02-16-export-panel-4k.md  2026-02-16-smart-zoom-redesign.md  2026-02-16-unsplash-background-integration.md  2026-02-18-metal-preview-renderer.md  2026-02-18-webgl-compositor-design.md  2026-02-19-monorepo-separation.md  (+12 more)
scripts/: reinstall.sh  release.sh
src/: App.tsx  editor-app.tsx  glsl.d.ts  index.css  main.tsx  onboarding-app.tsx  recorder-app.tsx  window-picker-app.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  editor.json
src-tauri/icons/: icon.icns
src-tauri/src/: autozoom.rs  lib.rs  main.rs  project.rs  swift_ffi.rs
src-tauri/src/commands/: editor.rs  export.rs  mod.rs  permissions.rs  preview.rs  recording.rs  sources.rs
website/: package-lock.json  package.json
(+316 files in other folders)
