[package]
name = "reko"
version = "0.1.0"
description = "Reko"
authors = ["you"]
edition = "2021"

[lib]
name = "reko_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
ureq = "2"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSColor"] }
objc2-foundation = "0.3"
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
